# AsctecROS

./: .gitignore  README.md
asctec_drivers/: Asctec_drivers Waycommands EXPLAINED.txt
asctec_drivers/asctec_autopilot/: CMakeLists.txt  package.xml
asctec_drivers/asctec_autopilot/include/asctec_autopilot/: autopilot.h  serialinterface.h  telemetry.h
asctec_drivers/asctec_autopilot/src/: autopilot.cpp  autopilot.cpp~  autopilot_node.cpp  serial_interface.cpp  telemetry.cpp
asctec_drivers/asctec_mon/: package.xml
asctec_drivers/asctec_msgs/: CMakeLists.txt  package.xml
asctec_drivers/asctec_msgs/include/asctec_msgs/: common.h
asctec_drivers/asctec_msgs/msg/: CurrentWay.msg  WaypointCommand.msg  WaypointCommand.msg~  WaypointData.msg
asctec_drivers/asctec_msgs/msg_gen/cpp/include/asctec_msgs/: ControllerOutput.h  CtrlInput.h  CurrentWay.h  GPSData.h  GPSDataAdvanced.h  IMUCalcData.h  IMURawData.h  LLStatus.h  RCData.h  WaypointCommand.h  WaypointData.h
asctec_drivers/asctec_msgs/msg_gen/lisp/: ControllerOutput.lisp  CtrlInput.lisp  CurrentWay.lisp  GPSData.lisp  GPSDataAdvanced.lisp  IMUCalcData.lisp  IMURawData.lisp  LLStatus.lisp  RCData.lisp  WaypointCommand.lisp  WaypointData.lisp  _package.lisp  _package_ControllerOutput.lisp  _package_CtrlInput.lisp  _package_CurrentWay.lisp  _package_GPSData.lisp  _package_GPSDataAdvanced.lisp  _package_IMUCalcData.lisp  _package_IMURawData.lisp  _package_LLStatus.lisp  _package_RCData.lisp  _package_WaypointCommand.lisp  _package_WaypointData.lisp  asctec_msgs-msg.asd
asctec_drivers/asctec_msgs/src/asctec_msgs/msg/: _ControllerOutput.py  _CtrlInput.py  _CurrentWay.py  _GPSData.py  _GPSDataAdvanced.py  _IMUCalcData.py  _IMURawData.py  _LLStatus.py  _RCData.py  _WaypointCommand.py  _WaypointData.py  __init__.py
asctec_drivers/asctec_proc/: CMakeLists.txt  package.xml
asctec_drivers/asctec_proc/launch/: asctec_driver_nodelets.launch  multi_asctec_driver_nodelet_hum.launch  single_asctec_driver_nodelet_hum.launch
asctec_drivers/asctec_proc/launch/updatedLaunchFiles/: height_test_asctec_driver_nodelets.launch  multiple_asctec_driver_nodelets.launch  new_asctec_driver_nodelets.launch
asctec_drivers/asctec_proc/scripts/: AsctecConfigParser.py  PlotGPSData.py  Quadrotor.py  Waypoint.py  WaypointListDataset.py  WaypointManager.py  WaypointManagerUI.py  WaypointTimes.py  asctec_drivers_config.xml  manui.py  manui.ui  mapsScript.py  plot_gps_data.py  velocityTest.py  waypoint_manager.py  waypoint_manager_absolute.py  waypoints.json
asctec_drivers/asctec_proc/scripts/backup/: plot_gps_data.py  waypoint_manager.py  waypoint_manager_absolute.py  waypoint_manager_absolute_backup.py
asctec_drivers/asctec_proc/scripts/config/: asctec_drivers_config.xml
asctec_drivers/asctec_proc/scripts/waypointGenerator/: gmaps.py  interface.py  interface.ui  point.txt  teste.txt  waypointGenerator.py
asctec_drivers/ccny_asctec_firmware/: manifest.xml
asctec_drivers/ccny_asctec_firmware_2/: manifest.xml
asctec_drivers/mav_common/: CMakeLists.txt  package.xml
asctec_drivers/mav_msgs/: CMakeLists.txt  package.xml
asctec_drivers/mav_srvs/: CMakeLists.txt  package.xml
asctec_drivers/pelican_urdf/: CMakeLists.txt  package.xml
